source/_base.scss
html, body {
    overflow-x: hidden;
    touch-action: pan-y;
    position: relative;
}

body {
    margin: 0;
}

#fork-corner {
    z-index: 105;
}

.fork-corner + div {
    width: $default-corner-size;
    height: $default-corner-size;
    z-index: 100;
}
/* ... */

